# cuZ-checker

./: CMakeLists.txt  README.md
NetCDFReader/: Makefile.in
examples/: CMakeLists.txt  compareDataSets.cu  test_cuderivative.cu
zc/include/: CMakeLists.txt  cuZC_derivatives.h  cuZC_entry.h  cuZC_ssim.h  cuZC_typeOne.h  cuZC_typeThree.h  cuZC_typeTwo.h  der.hpp  m_norm.hpp  matrix.hpp  ssim.hpp  zc.h
zc/src/: CMakeLists.txt  ZC_CompareData_double.c  ZC_CompareData_float.cpp  ZC_rw.c  cuZC_derivatives.cu  cuZC_entry.cu  cuZC_ssim.cu  cuZC_typeOne.cu  cuZC_typeThree.cu  cuZC_typeTwo.cu  zc_derivativeMetrics.cpp
